modified:   index.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -132,13 +132,13 @@ input#open{
 }
 
 .text-one::before{
-    content: "Valentine´s";
+    content: "Dich";
     top: 30px;
     color: #d04e4e;
 }
 
 .text-one:after{
-    content: "day!";
+    content: "gibt!";
     top:60px;
 }
 
